[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "neomate-ai"
version = "0.1.0"
description = "Your personal, autonomous desktop AI assistant that can see, hear, and act."
authors = [{name = "NeoMate Contributors", email = "email@example.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ai", "assistant", "desktop", "automation", "voice", "vision", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/emonhmamun/NeoMate-Agent-AI"
Repository = "https://github.com/emonhmamun/NeoMate-Agent-AI"

[project.scripts]
neomate = "src.main:run"

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.12"
flake8 = "^6.0"
mypy = "^1.0"
ruff = "^0.1"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/venv/*"]

[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = ["B101", "B601"]
