[tool.poetry]
name = "neomate-ai"
version = "0.1.0"
description = "Revolutionizing human-computer interaction with autonomous AI intelligence"
authors = ["Emon H. Mamun <ehm.businessbd@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/emonhmamun/NeoMate-AI"
repository = "https://github.com/emonhmamun/NeoMate-AI"
documentation = "https://github.com/emonhmamun/NeoMate-AI/blob/main/docs/"
keywords = ["ai", "assistant", "automation", "voice", "computer-vision", "nlp", "machine-learning"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Desktop Environment",
]
packages = [{include = "src"}]

[tool.poetry.urls]
"Bug Reports" = "https://github.com/emonhmamun/NeoMate-AI/issues"
"Source" = "https://github.com/emonhmamun/NeoMate-AI"
"Documentation" = "https://github.com/emonhmamun/NeoMate-AI/blob/main/docs/"
"Discussions" = "https://github.com/emonhmamun/NeoMate-AI/discussions"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
# Tier 0: The Foundation
asyncio = "^3.4.3"
trio = "^0.23.0"
anyio = "^4.0.0"
PyQt6 = "^6.5.0"
PySide6 = "^6.5.0"
flet = "^0.21.0"

# Tier 1: The Senses
openwakeword = "^0.5.1"
openai-whisper = "^20231117"
vosk = "^0.3.45"
sounddevice = "^0.4.6"
pyaudio = "^0.2.13"
mss = "^9.0.1"
Pillow = "^10.0.0"
opencv-python = "^4.8.0"
pytesseract = "^0.3.10"
easyocr = "^1.7.0"
keras-ocr = "^0.9.3"

# Tier 2: The Brain
ollama = "^0.2.0"
httpx = "^0.27.0"
aiohttp = "^3.8.0"
requests = "^2.31.0"
duckduckgo-search = "^4.1.0"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
# LLM API Providers
openai = "^1.35.0"
anthropic = "^0.30.0"
google-generativeai = "^0.8.0"
mistralai = "^0.4.0"
together = "^0.2.0"
fireworks-ai = "^0.14.0"
groq = "^0.9.0"
replicate = "^0.25.0"
huggingface-hub = "^0.34.0"
deepinfra = "^0.1.0"
cohere = "^5.5.0"
# Additional LLM providers (may use OpenAI-compatible clients)
ai21 = "^2.0.0"

# Tier 3: The Hands
pyautogui = "^0.9.54"
pydirectinput = "^1.0.4"
pynput = "^1.7.6"
pyperclip = "^1.8.2"
selenium = "^4.15.0"
playwright = "^1.40.0"

# Tier 4: The Soul & Memory
piper-tts = "^1.2.0"
coqui-tts = "^0.27.0"
pyttsx3 = "^2.90"
tinydb = "^4.8.0"
cryptography = "^41.0.0"

# Tier 5: Utilities
python-dotenv = "^1.0.0"
psutil = "^5.9.0"
watchdog = "^4.0.0"
pyyaml = "^6.0.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.5.0"
pre-commit = "^3.5.0"
tox = "^4.11.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.0"
sphinx-rtd-theme = "^1.3.0"
myst-parser = "^2.0.0"

[tool.poetry.extras]
api = ["fastapi", "uvicorn"]

[tool.poetry.scripts]
neomate = "src.main:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["S101", "COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
